passing two tests